--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
+    <!-- <include src="./partials/example.html"></include> -->
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
